# TrueFloat

./: CMakeLists.txt  README.md  TrueFloat.hpp  main.cpp  testTureFloat.cpp  truefloat.cpp  truefloat.hpp
